@@ -196,12 +196,14 @@ for ($i = 0; $i < $num_dbs; $i++) {
             </tr>
             <tr>
                 <td nowrap="nowrap">
-                    <input type="radio" name="what" value="structure" id="radio_copy_structure" checked="checked" />
+                    <input type="radio" name="what" value="structure" id="radio_copy_structure" />
                     <label for="radio_copy_structure"><?php echo $strStrucOnly; ?></label>&nbsp;&nbsp;<br />
-                    <input type="radio" name="what" value="data" id="radio_copy_data" />
+                    <input type="radio" name="what" value="data" id="radio_copy_data" checked="checked" />
                     <label for="radio_copy_data"><?php echo $strStrucData; ?></label>&nbsp;&nbsp;<br />
+                    
                     <input type="radio" name="what" value="dataonly" id="radio_copy_dataonly" />
                     <label for="radio_copy_dataonly"><?php echo $strDataOnly; ?></label>&nbsp;&nbsp;<br />
+                    
                     <input type="checkbox" name="drop_if_exists" value="true" id="checkbox_drop" />
                     <label for="checkbox_drop"><?php echo $strStrucDrop; ?></label>&nbsp;&nbsp;<br />
                     <input type="checkbox" name="auto_increment" value="1" id="checkbox_auto_increment" />
