@@ -29,6 +29,8 @@ $Source$
       while editing.
     * db_details_structure.php, lang/*: Implement database renaming (RFE
       #792463).
+    * tbl_properties_operations.php: Copy table defaults to structure and data
+      (RFE #856517).
 
 2004-03-09 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/common.lib.php, libraries/display*, lang/*: 
